--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/zachlatta/hungry-hungry-hippos-on-ice",
   "dependencies": {
     "express": "^4.10.4",
+    "lodash": "^2.4.1",
     "socket.io": "^1.2.1"
   }
 }
